[gd_scene load_steps=8 format=3 uid="uid://cmocr57dhhsd3"]

[ext_resource type="Script" uid="uid://b20fnpl0tyqxr" path="res://scripts/dialogue.gd" id="1_cfanh"]
[ext_resource type="Texture2D" uid="uid://cwuorg3iibd1q" path="res://assets/headlordofland.png" id="2_7f5y4"]
[ext_resource type="Texture2D" uid="uid://8u5vmgt6pctd" path="res://assets/headu.png" id="3_326pc"]
[ext_resource type="Texture2D" uid="uid://b5ur45xobitq5" path="res://assets/SpeechBubble.png" id="4_3l7pr"]
[ext_resource type="Texture2D" uid="uid://c6ot3kh7widfo" path="res://assets/icon.svg" id="5_7f5y4"]

[sub_resource type="LabelSettings" id="LabelSettings_ryofh"]
font_size = 41

[sub_resource type="LabelSettings" id="LabelSettings_cfanh"]
font_size = 35

[node name="Dialogue" type="Node2D"]
z_index = 4096
script = ExtResource("1_cfanh")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Headlordofland" type="Sprite2D" parent="."]
visible = false
z_index = 4096
position = Vector2(-424, 0)
scale = Vector2(9.2619, 9.2619)
texture = ExtResource("2_7f5y4")

[node name="Headu" type="Sprite2D" parent="."]
visible = false
z_index = 4096
position = Vector2(440, 1.90735e-06)
scale = Vector2(8.61364, 8.61364)
texture = ExtResource("3_326pc")

[node name="SpeechBubble" type="Sprite2D" parent="."]
z_index = 4096
position = Vector2(-9.53674e-07, -8)
scale = Vector2(5.33779, 5.33779)
texture = ExtResource("4_3l7pr")

[node name="DialogueLine" type="Label" parent="."]
z_index = 4096
offset_left = -496.0
offset_top = 120.0
offset_right = 228.0
offset_bottom = 267.0
text = "This is the default text
please change this when instantiating the
dialogue scene"
label_settings = SubResource("LabelSettings_ryofh")

[node name="UninteractiveLabel" type="Label" parent="."]
visible = false
z_index = 4096
offset_left = 456.0
offset_top = 240.0
offset_right = 522.0
offset_bottom = 280.0
text = ">> E"
label_settings = SubResource("LabelSettings_cfanh")

[node name="Buttons" type="Node2D" parent="."]
visible = false
position = Vector2(0, 32)

[node name="ContinueButton" type="Button" parent="Buttons"]
offset_left = -216.0
offset_top = -72.0
offset_right = -80.0
offset_bottom = 64.0
icon = ExtResource("5_7f5y4")
flat = true

[node name="EndButton" type="Button" parent="Buttons"]
offset_left = 56.0
offset_top = -72.0
offset_right = 192.0
offset_bottom = 64.0
icon = ExtResource("5_7f5y4")
flat = true

[connection signal="gui_input" from="Buttons/ContinueButton" to="." method="_onPressContinue"]
[connection signal="gui_input" from="Buttons/EndButton" to="." method="_onPressStop"]
